message OptionalMessage {
  optional bytes valueIfPresent = 1;
}
